--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
   - "3.6"
   - "3.7"
 install:
-  - pip install kazoo pytest
+  - pip install pytest
+  - python setup.py install
 script:
   - pytest -s ./tst
